<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:layout_margin="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">







    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/first"
        android:background="@drawable/whiteboard_bg"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"

        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/second">



        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="40dp">

            <com.bpl.customfonts.CustomTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:fontname="centralSansXBold"
              android:layout_alignParentStart="true"
                android:textColor="@color/grey_text_color"

                android:text="@string/unit" />


            <ToggleButton

                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/separator"
                android:id="@+id/unitConversion"
                android:textOn="@string/mm_hg"
                android:textOff="@string/kpa"

                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/separator"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="40dp">


            <com.bpl.customfonts.CustomTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/grey_text_color"
                app:fontname="centralSansXBold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
             android:layout_alignParentStart="true"
                android:text="@string/voice" />

            <Switch

                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/switchVoice"
                android:background="@color/separator"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>