<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/home_bg"
        android:layout_margin="5dp"
        android:weightSum="3.5"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:layout_height="wrap_content">


            <TextView
                android:text="Blood Pressure"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:padding="2dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/bpPressure" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:text="/"
                    android:textSize="50sp"
                    android:id="@+id/hyphen"
                    android:textColor="@color/text_color"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_alignBaseline="@+id/sysPressure"
                    android:layout_alignBottom="@+id/sysPressure"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="---"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:layout_width="wrap_content"
                    android:textSize="40sp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/sysPressure"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/hyphen"


                    />





                <TextView
                    android:text="@string/sys_by_dia"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sys_dia_text"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:text="---"
                    android:textColor="@color/text_color"
                    android:layout_width="wrap_content"
                    android:textSize="40sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/diaPressure"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/hyphen" />


                <TextView
                    android:text="@string/pul_rate"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_below="@+id/hyphen"
                    android:layout_height="wrap_content"
                    android:id="@+id/pulseRateText" />

                <TextView
                    android:text="---"
                    android:textStyle="bold"

                    android:textSize="38sp"
                    android:textColor="@color/text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pulseRate"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_below="@+id/pulseRateText"
                    android:layout_centerHorizontal="true"

                    />

                <TextView
                    android:text="@string/bpm"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:id="@+id/bpmText"
                    android:layout_marginEnd="10dp"
                    android:layout_alignBottom="@+id/pulseRate"
                    android:layout_alignEnd="@+id/pulseRateText" />

                <TextView
                    android:text="@string/mm_hg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/pulseRateText"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/mmHgText" />


            </RelativeLayout>






        </LinearLayout>





            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@color/bg_start_color"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/save"
                android:background="@drawable/background_button"
                android:textColor="@color/white"
                android:visibility="visible"
                android:id="@+id/Save"
                />

            <Button
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/comment"
                android:background="@drawable/background_button"
                android:textColor="@color/white"
                android:visibility="visible"
                android:layout_marginStart="5dp"
                android:id="@+id/Comment"
                />

        </LinearLayout>








        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customviews.CustomBPChart
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/customBPView"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>


        </LinearLayout>

        </LinearLayout>

</FrameLayout>